Changed pom.xml (updated the compiler version from 24), RideManager (switch part with methods) and RideQueueManagerTest  ( .getFirst() --> get(0))